--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid rgb(192, 125, 136, 0.74);
-  box-shadow: 1px 1px 20px 2px rgba(175, 117, 158, 0.74);
+  box-shadow: 1px 1px 20px 2px rgba(38, 48, 58, 0.1);
   /* padding: 5px; */
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
