--- a/src/Components/Products/HomePageProductList.module.css
+++ b/src/Components/Products/HomePageProductList.module.css
@@ -1,18 +1,20 @@
-.ProductListflex{
-    display: flex;
-    flex-direction: row;
-    padding-left: -300px;
-    
+.ProductListflex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.button:hover {
-    width: 50px;
-    border: none;
-    border-radius: 40px;
-    color: #586675;
 
-   
+.button {
+  width: 100px;
+  border: none;
+  border-radius: 20px;
+  color: #586675;
+  padding: 5px;
+  margin-left: 80%;
+  background-color: white;
 }
-.viewMore:hover{
-    
-  
+
+.button:hover {
+  font-size: 17px;
 }
