--- a/src/Components/Products/productDescription.module.css
+++ b/src/Components/Products/productDescription.module.css
@@ -1,36 +1,34 @@
-.MainDiv{
-width: 220.9px;
-height: 350.9px;
-background-color: white;
-padding-top: 20px;
-margin-left: 80px;
-margin-top: 100px;
-border-radius: 40px;
+.MainDiv {
+  width: 220.9px;
+  height: 350.9px;
+  background-color: white;
+  padding-top: 20px;
+  margin-left: 80px;
+  margin-top: 100px;
+  border-radius: 40px;
 }
-.MainDivInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding-right: 32px;
-    padding-left: 32px;
-    
-  
-   
+.MainDivInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 32px;
+  padding-left: 32px;
 }
-.AppleWatch{
-    width: 156.9px;
-    height: 156.9px;
-   
+.AppleWatch {
+  width: 156.9px;
+  height: 156.9px;
 }
-.infoOfItme{
-    width: 210px;
-    height: 110px;
-    padding-top: 30px;
-  
+.infoOfItme {
+  width: 210px;
+  height: 110px;
+  padding-top: 30px;
 }
-.button:hover{
-background-color: white;
-border-radius: 5px;
 
+.button {
+  border: none;
+}
+.button:hover {
+  background-color: white;
+  border-radius: 5px;
 }
