--- a/src/Components/Cart/Checkout.module.css
+++ b/src/Components/Cart/Checkout.module.css
@@ -7,6 +7,7 @@
   margin-left: 60px;
   box-shadow: 1px 1px 7px 1px rgb(184, 126, 94, 0.2);
   border-radius: 10px;
+  margin-top: 100px;
 }
 
 .title {
