--- a/src/Components/Cart/form.module.css
+++ b/src/Components/Cart/form.module.css
@@ -2,19 +2,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid rgb(38, 48, 58, 0.2);
-  width: 30%;
+  border: 0.1px solid rgb(38, 48, 58, 0.2);
+  width: 30vw;
   margin-left: auto;
   margin-right: auto;
   max-height: 400px;
   overflow: scroll;
   padding: 10px;
-  position: relative;
+  position: absolute;
+  bottom: 20vh;
+  left: 35vw;
   border-radius: 10px;
+  background-color: #f5f5f5;
 }
 
 .input {
+  margin: auto;
+
   margin-bottom: 2rem;
+  border: none;
+  border-radius: 10px;
 }
 .btn {
   background-color: rgb(88, 102, 117);
@@ -27,9 +34,14 @@
 
 .btn:hover {
   background-color: rgb(238, 54, 52);
-  color: black;
 }
 
 .close {
   margin-left: 85%;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: rgb(238, 54, 52);
+  text-decoration: underline;
 }
