--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -1,22 +1,29 @@
 .cart {
-  display: flex;
-  margin-top: 40px;
-  margin-right: 50px;
+  display: grid;
+  margin: auto;
+  width: 90%;
+  grid-template-columns: 75% 30%;
+  margin-top: 30px;
 }
 
-.cart :nth-child(1) {
-  flex-shrink: 5;
-  /* flex-basis: 10px; */
-}
-
-.cart :nth-child(2) {
+/* .cart :nth-child(2) {
   height: 30%;
-  /* margin-top: 40px; */
-}
+  width: 300px;
+} */
 .title {
+  width: fit-content;
   font-size: 1.5rem;
   color: rgb(38, 48, 58);
-  position: relative;
-  right: 500px;
-  top: 80px;
+  /* position: relative;
+  right: 600px;
+  top: 40px; */
+  text-align: left;
+}
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  /* width: 50%; */
+  /* display: inline-block; */
 }
