--- a/src/Components/Cart/form.module.css
+++ b/src/Components/Cart/form.module.css
@@ -6,11 +6,11 @@
   width: 30vw;
   margin-left: auto;
   margin-right: auto;
-  max-height: 400px;
+  max-height: 100vh;
   overflow: scroll;
   padding: 10px;
+  bottom: 3vh;
   position: absolute;
-  bottom: 20vh;
   left: 35vw;
   border-radius: 10px;
   background-color: #f5f5f5;
