--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-color: #f5f5f5;
+}
+.AppSliderAndSideBar{
+ display: flex;
+ flex-direction: row;
+ position: relative;
+ padding-left: 30px;
 }
 
 .App-logo {
