--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -11,7 +11,9 @@
   background-color: white;
   z-index: 10;
 }
-
+.header :nth-child(n) {
+  text-decoration: none;
+}
 .logo {
   /* width: 200px; */
   height: 40px;
@@ -28,7 +30,9 @@
   font-size: 35px;
   display: inline;
   position: relative;
-  top: -10px;
+  text-decoration: none;
+  color: black;
+
   /* font-family: ; */
 }
 
