--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  border: 1px solid rgb(192, 125, 136, 0.74);
+  border-bottom: 1px solid rgb(192, 125, 136, 0.74);
   box-shadow: 1px 1px 20px 2px rgba(38, 48, 58, 0.1);
   /* padding: 5px; */
   position: sticky;
